Visible fix.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -114,7 +114,6 @@ a#amnesty_logo {
 }
 #video {
   height: 395px;
-  visibility:hidden;
   opacity:0;
 }
 .info_box {
